<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/image" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#448AFF"
        android:text="@string/_1"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </Button>

    <Button
        android:id="@+id/button2"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginStart="111dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#448AFF"
        android:text="@string/_2"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </Button>

    <Button
        android:id="@+id/button3"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginStart="211dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#448AFF"
        android:text="@string/_3"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </Button>

    <Button
        android:id="@+id/button4"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginTop="176dp"
        android:layout_marginBottom="351dp"
        android:backgroundTint="#448AFF"
        android:text="@string/_4"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints">

    </Button>

    <Button
        android:id="@+id/button5"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginStart="111dp"
        android:layout_marginTop="176dp"
        android:layout_marginBottom="351dp"
        android:backgroundTint="#448AFF"
        android:text="@string/_5"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints">

    </Button>

    <Button
        android:id="@+id/button6"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginStart="211dp"
        android:layout_marginTop="176dp"
        android:layout_marginBottom="351dp"
        android:backgroundTint="#448AFF"
        android:text="@string/_6"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toStartOf="@+id/button13"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints">

    </Button>

    <Button
        android:id="@+id/button7"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginTop="380dp"
        android:layout_marginBottom="251dp"
        android:backgroundTint="#448AFF"
        android:text="@string/_7"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3"
        tools:ignore="MissingConstraints">

    </Button>

    <Button
        android:id="@+id/button8"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginStart="111dp"
        android:layout_marginTop="380dp"
        android:layout_marginBottom="251dp"
        android:backgroundTint="#448AFF"
        android:text="@string/_8"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3">

    </Button>

    <Button
        android:id="@+id/button9"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginStart="211dp"
        android:layout_marginTop="380dp"
        android:layout_marginBottom="251dp"
        android:backgroundTint="#448AFF"
        android:text="@string/_9"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3">

    </Button>

    <Button
        android:id="@+id/button10"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginStart="106dp"
        android:layout_marginTop="480dp"
        android:backgroundTint="#448AFF"
        android:text="@string/_0"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button23"
        app:layout_constraintEnd_toStartOf="@+id/button20"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3">


    </Button>

    <Button
        android:id="@+id/button11"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="200sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginStart="211dp"
        android:layout_marginTop="580dp"
        android:layout_marginBottom="51dp"
        android:backgroundTint="#448AFF"
        android:text="@string/_00"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3">

    </Button>

    <Button
        android:id="@+id/button12"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginStart="311dp"
        android:layout_marginTop="74dp"
        android:backgroundTint="#448AFF"
        android:text="@string/_pop"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </Button>

    <Button
        android:id="@+id/button13"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginStart="311dp"
        android:layout_marginTop="174dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#448AFF"
        android:text="@string/_pu"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </Button>

    <Button
        android:id="@+id/button14"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginStart="311dp"
        android:layout_marginTop="379dp"
        android:layout_marginBottom="252dp"
        android:backgroundTint="#448AFF"
        android:text="@string/x"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3">

    </Button>

    <Button
        android:id="@+id/button15"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginStart="311dp"
        android:layout_marginTop="480dp"
        android:backgroundTint="#448AFF"
        android:text="@string/po"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3">

    </Button>

    <Button
        android:id="@+id/button16"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="75sp"
        android:layout_gravity="center"
        android:backgroundTint="#448AFF"
        android:text="@string/c"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </Button>

    <Button
        android:id="@+id/button17"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="75sp"
        android:layout_gravity="center"
        android:layout_marginStart="106dp"
        android:backgroundTint="#448AFF"
        android:text="@string/ce"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button18"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </Button>

    <Button
        android:id="@+id/button18"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="75sp"
        android:layout_gravity="center"
        android:layout_marginStart="206dp"
        android:backgroundTint="#448AFF"
        android:text="@string/o"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button19"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </Button>

    <Button
        android:id="@+id/button19"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="75sp"
        android:layout_gravity="center"
        android:layout_marginStart="311dp"
        android:backgroundTint="#448AFF"
        android:text="@string/q"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </Button>

    <Button
        android:id="@+id/button20"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginStart="206dp"
        android:layout_marginTop="480dp"
        android:backgroundTint="#448AFF"
        android:text="@string/h"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toStartOf="@+id/button15"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3">

    </Button>

    <Button
        android:id="@+id/button21"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginTop="480dp"
        android:backgroundTint="#448AFF"
        android:text="@string/f"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button22"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3">

    </Button>

    <Button
        android:id="@+id/button22"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginTop="580dp"
        android:layout_marginBottom="51dp"
        android:backgroundTint="#448AFF"
        android:text="@string/x2"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toStartOf="@+id/button23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3">

    </Button>

    <Button
        android:id="@+id/button23"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginStart="111dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="51dp"
        android:backgroundTint="#448AFF"
        android:text="@string/_1_x"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="@+id/button11"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3">

    </Button>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginBottom="631dp"
        android:gravity="end"
        android:paddingStart="@dimen/material_emphasis_disabled"
        android:paddingEnd="12sp"
        android:text="@string/_0"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>